# eddyq

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  deny.toml  docker-compose.dev.yml  justfile  package.json  pnpm-lock.yaml  release.toml
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: Cargo.toml  README.md
benches/benches/: claim.rs  enqueue.rs
benches/src/: lib.rs  report.rs  scenarios.rs
benches/src/runners/: bullmq.rs  eddyq.rs  graphile.rs  mod.rs  sqlxmq.rs
crates/eddyq-cli/: Cargo.toml  README.md
crates/eddyq-cli/src/: main.rs
crates/eddyq-client/: Cargo.toml  README.md
crates/eddyq-client/src/: lib.rs
crates/eddyq-core/: Cargo.toml  README.md
crates/eddyq-core/examples/: hello.rs
crates/eddyq-core/migrations/: 20260421000001_init.down.sql  20260421000001_init.sql  20260421000001_init.up.sql  20260421000002_schedules.down.sql  20260421000002_schedules.up.sql  20260421000003_groups.down.sql  20260421000003_groups.up.sql  20260421000004_group_rate.down.sql  20260421000004_group_rate.up.sql
crates/eddyq-core/src/: enqueue.rs  error.rs  fetch.rs  group.rs  job.rs  leader.rs  lib.rs  migrate.rs  named_queue.rs  queue.rs  retry.rs  runtime.rs  schedule.rs  stats.rs  worker.rs
crates/eddyq-core/tests/: integration.rs
crates/eddyq-napi/: Cargo.toml  README.md  build.rs
crates/eddyq-napi/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/decisions/: 000-template.md  001-async-runtime-tokio.md  002-db-driver-sqlx.md  003-migrations-refinery.md  004-hybrid-wakeup.md  005-node-bindings-napi-rs.md  006-observability.md  007-workspace-layout.md  008-rust-only-handlers-v1.md  009-optional-partitioning.md  010-pgbouncer-modes.md  011-migrations-deploy-step.md  README.md
docs/guide/: index.md  installation.md  migrations.md
docs/nestjs/: example.md  injecting.md  lifecycle.md  schedules.md  setup.md  workers.md
docs/node/: concurrency.md  deployment.md  enqueueing.md  groups.md  maintenance.md  queues.md  quick-start.md  retries.md  schedules.md  shutdown.md  workers.md
docs/patterns/: bulk-mixed-queue.md  fail-fast.md  idempotency.md  index.md  stop-retrying.md  throttling.md  timeouts.md
docs/wakeboard/: index.md  nestjs.md
examples/nestjs-basic/: README.md  load.mjs  package.json  tsconfig.json
examples/nestjs-basic/src/: app.module.ts  main.ts  worker.ts  workers.module.ts
examples/nestjs-basic/src/email/: email.controller.ts  email.module.ts  email.processor.ts
examples/nestjs-basic/src/reports/: reports.module.ts  reports.processor.ts  reports.service.ts
