[workspace]
resolver = "3"
members = [
    "crates/eddyq-core",
    "crates/eddyq-client",
    "crates/eddyq-cli",
    "crates/eddyq-napi",
    "benches",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/eddyqueue/eddyq"
homepage = "https://github.com/eddyqueue/eddyq"
authors = ["The eddyq contributors"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
