[package]
name = "eddyq-benches"
description = "Criterion benchmarks for eddyq (not published)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
eddyq-core = { path = "../crates/eddyq-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "enqueue"
harness = false

[[bench]]
name = "claim"
harness = false
