[package]
name = "eddyq-client"
description = "Enqueue and admin client for eddyq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["queue", "postgres", "client", "enqueue"]
categories = ["asynchronous", "database"]

[lints]
workspace = true

[dependencies]
eddyq-core = { path = "../eddyq-core", version = "0.0.1" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
