[package]
name = "eddyq-napi"
description = "NAPI-RS Node.js bindings for eddyq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["queue", "postgres", "napi", "node"]
categories = ["asynchronous", "database"]
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
eddyq-client = { path = "../eddyq-client", version = "0.0.1" }
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "chrono_date"] }
napi-derive = "3"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
napi-build = "2"
